Added a function to select a custom theme, function to get a list of elements in listbox and more

--- a/index.html
+++ b/index.html
@@ -11,34 +11,15 @@
             align-items: center;
             height: 100vh;
         }
+
+        .my-custom-select {
+            background: red;
+            border-radius: 99px;
+        }
     </style>
 </head>
 <body>
-    <div class="container">
-        <div class="listbox">
-            <div class="listbox__item">test1</div>
-            <div class="listbox__item">test2</div>
-            <div class="listbox__item">test3</div>
-            <div class="listbox__item">test1</div>
-            <div class="listbox__item">test2</div>
-            <div class="listbox__item">test3</div>
-            <div class="listbox__item">test1</div>
-            <div class="listbox__item">test2</div>
-            <div class="listbox__item">test3</div>
-            <div class="listbox__item">test1</div>
-            <div class="listbox__item">test2</div>
-            <div class="listbox__item">test3</div>
-            <div class="listbox__item">test1</div>
-            <div class="listbox__item">test2</div>
-            <div class="listbox__item">test3</div>
-            <div class="listbox__item">test1</div>
-            <div class="listbox__item">test2</div>
-            <div class="listbox__item">test3</div>
-            <!--<div class="listbox__items">
-                
-            </div>-->
-        </div>
-    </div>
+    <div class="container"></div>
 
     <script src="./app.js"></script>
 </body>
